Fixed table rows vertical align

--- a/manager/assets/styles/app.css
+++ b/manager/assets/styles/app.css
@@ -54,6 +54,13 @@ main {
     }
 }
 
+.table {
+    th,
+    td {
+        vertical-align: middle;
+    }
+}
+
 .footer {
     min-height: calc(3rem + 1px);
 
